--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "devDependencies": {
     "mocha": "^7.2.0"
   },
+  "files": [
+    "CHANGELOG.md",
+    "README.md",
+    "index.js"
+  ],
   "homepage": "https://github.com/twada/mocha-spec-tree-reporter",
   "keywords": [
     "mocha",
